@@ -1,3 +1,8 @@
+2000-06-23  Michael Meeks  <michael@helixcode.com>
+
+	* container-io.c (sample_container_load): use STORAGE_TYPE ("efs")
+	define to help vfs switch. (sample_container_save): ditto.
+
 2000-05-26  Dan Winship  <danw@helixcode.com>
 
 	* component.c (load_stream_cb): 
